fix: maximize visible text region on combo-box and autocomplete fields
Specially on small width displays.

--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -231,6 +231,7 @@ cds-combo-box::part(trigger-button) {
 
 cds-combo-box::part(input) {
   outline: none;
+  padding-inline-end: 1rem;
 }
 
 cds-combo-box:where(:active, :focus)::part(cds--combo-box) {
